--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -29,6 +32,28 @@
             </nav>
         </div>
     </header>
+    <section class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <div class="label">
+                    <div class="dots">
+                        <div class="dot-1"></div>
+                        <div class="dot-2"></div>
+                        <div class="dot-3"></div>
+                    </div>
+                    <p class="label-text">Early Access Now Open</p>
+
+                </div>
+                <h1>Structured thinking,<span class="green"> not just note-taking.</span></h1>
+                <p class="hero-para" >A private space to store notes, links, and learning summaries — designed to
+                    help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                <div class="hero-buttons">
+                    <button class="primary-btn">Start Building Your Vault<i
+                            class="fa-solid fa-arrow-right"></i></button>
+                    <button class="secondary-btn"><i class="fa-solid fa-play"></i>See How It Works</button>
+                </div>
+
+            </div>
 </body>
 
 </html>
