--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
                 </div>
                 <h1>Structured thinking,<span class="green"> not just note-taking.</span></h1>
-                <p class="hero-para" >A private space to store notes, links, and learning summaries — designed to
+                <p class="hero-para">A private space to store notes, links, and learning summaries — designed to
                     help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
                 <div class="hero-buttons">
                     <button class="primary-btn">Start Building Your Vault<i
@@ -54,6 +54,42 @@
                 </div>
 
             </div>
+        </div>
+    </section>
+    <section class="note">
+        <div class="container">
+            <div class="note-content">
+                <div class="title">
+                    <h2>Notes don't fail, Structure does.</h2>
+                    <p class="text-16-px">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>                
+                </div>
+                <div class="note-cards">
+                    <div class="note-card">
+                        <div class="note-icon-wrapper"><img src="images/Vector.png" alt="Icon 1"></div>
+                        <h3>Scattered notes</h3>
+                        <p class="text-16-px">Your ideas live in 10 different apps, none of them connected.</p>
+                    </div>
+                    <div class="note-card">
+                        <div class="note-icon-wrapper"><img src="images/Bookmarks.png" alt="Icon 1"></div>
+                        <h3>Bookmark overload</h3>
+                        <p class="text-16-px">Hundreds of saved links you'll never revisit or remember.</p>
+                    </div>
+                     <div class="note-card">
+                        <div class="note-icon-wrapper"><img src="images/Brain.png" alt="Icon 1"></div>
+                        <h3>No idea connections</h3>
+                        <p class="text-16-px">Insights stay isolated, never building into bigger understanding.</p>
+                    </div>
+                     <div class="note-card">
+                        <div class="note-icon-wrapper"><img src="images/Info.png" alt="Icon 1"></div>
+                        <h3>Forgetting what you learned</h3>
+                        <p class="text-16-px">Knowledge fades because there's no system to retain it.</p>
+                    </div>
+                  
+
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
