--- a/index.html
+++ b/index.html
@@ -90,6 +90,28 @@
             </div>
         </div>
     </section>
+    <section class="solution"> 
+        <div class="container">
+            <div class="solution-content">
+                <div class="solution-image-wrapper">
+                    <img src="images/knowledge.png" alt="Solution Image">
+                </div>
+                <div class="solution-text-content">
+                    <div class="title">
+                        <p class="label-green">The Solution</p>
+                    <h2>Your second brain, structured by design.</h2>
+                    <p class="text-16-px">Personal Knowledge Vault isn't another note-taking app. It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                    </div>
+                   <ul class="solution-items">
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Capture ideas with structure built-in from day one</li>
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Connect related concepts automatically as you write</li>
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Build lasting knowledge through reflection prompts</li>
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Find anything instantly with semantic search</li>
+                   </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
