--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
             <div class="note-content">
                 <div class="title">
                     <h2>Notes don't fail, Structure does.</h2>
-                    <p class="text-16-px">You're not bad at learning. Your tools just weren't built for how knowledge actually works.</p>                
+                    <p class="text-16-px">You're not bad at learning. Your tools just weren't built for how knowledge
+                        actually works.</p>
                 </div>
                 <div class="note-cards">
                     <div class="note-card">
@@ -74,23 +75,23 @@
                         <h3>Bookmark overload</h3>
                         <p class="text-16-px">Hundreds of saved links you'll never revisit or remember.</p>
                     </div>
-                     <div class="note-card">
+                    <div class="note-card">
                         <div class="note-icon-wrapper"><img src="images/Brain.png" alt="Icon 1"></div>
                         <h3>No idea connections</h3>
                         <p class="text-16-px">Insights stay isolated, never building into bigger understanding.</p>
                     </div>
-                     <div class="note-card">
+                    <div class="note-card">
                         <div class="note-icon-wrapper"><img src="images/Info.png" alt="Icon 1"></div>
                         <h3>Forgetting what you learned</h3>
                         <p class="text-16-px">Knowledge fades because there's no system to retain it.</p>
                     </div>
-                  
+
 
                 </div>
             </div>
         </div>
     </section>
-    <section class="solution"> 
+    <section class="solution">
         <div class="container">
             <div class="solution-content">
                 <div class="solution-image-wrapper">
@@ -99,18 +100,61 @@
                 <div class="solution-text-content">
                     <div class="title">
                         <p class="label-green">The Solution</p>
-                    <h2>Your second brain, structured by design.</h2>
-                    <p class="text-16-px">Personal Knowledge Vault isn't another note-taking app. It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+                        <h2>Your second brain, structured by design.</h2>
+                        <p class="text-16-px">Personal Knowledge Vault isn't another note-taking app. It's a thinking
+                            environment where every note, link, and summary becomes part of an interconnected web of
+                            understanding.</p>
                     </div>
-                   <ul class="solution-items">
-                        <li><img src="images/CheckCircle.png" alt="Check Circle">Capture ideas with structure built-in from day one</li>
-                        <li><img src="images/CheckCircle.png" alt="Check Circle">Connect related concepts automatically as you write</li>
-                        <li><img src="images/CheckCircle.png" alt="Check Circle">Build lasting knowledge through reflection prompts</li>
-                        <li><img src="images/CheckCircle.png" alt="Check Circle">Find anything instantly with semantic search</li>
-                   </ul>
+                    <ul class="solution-items">
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Capture ideas with structure built-in
+                            from day one</li>
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Connect related concepts automatically
+                            as you write</li>
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Build lasting knowledge through
+                            reflection prompts</li>
+                        <li><img src="images/CheckCircle.png" alt="Check Circle">Find anything instantly with semantic
+                            search</li>
+                    </ul>
                 </div>
             </div>
         </div>
+    </section>
+    <section class="era">
+        <div class="container">
+            <div class="era-content">
+                <div class="title">
+                    <h2>Ready to think more clearly?</h2>
+                    <p class="text-16-px">Join thousands of learners who are building their personal knowledge vaults.
+                        Start free, no credit card required.</p>
+                </div>
+                <div class="era-button-wrapper">
+                    <button class="primary-btn">Get Early Access<i class="fa-solid fa-arrow-right"></i></button>
+                    <p class="text-16-px">Free during early access • No credit card needed</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-top">
+                    <div class="footer-logo">
+                        <img src="images/logo-footer.png" alt="Footer Logo">
+                    </div>
+                    <div class="footer-social-icons">
+                        <p>Social Links</p>
+                        <div class="social-icons">
+                            <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                            <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                        </div>
+                    </div>
+                    <div class="footer-bottom">
+                        <p>&copy; 2026 Personal Knowledge Vault. All rights reserved.</p>
+                    </div>
+
+                </div>
+            </div>
     </section>
 </body>
 
